resources_captest/github.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: github1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: github1-eventsource-svc
            port:
              number: 13000
        path: /git-source/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
