resources_captest/ingress.git-source.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: github-new
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: github-eventsource-svc
            port:
              number: 15000
        path: /git-source-test/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
